--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="skills-details">
           <div class="text">
             <div class="topic">Skills</div>
-            <p>Proficiency in HTML5, CSS3, JavaScript, Tailwind CSS and ReactJS frameworks. Mastered responsive design and version control with Git. Expertise in creating wireframes, prototypes and high-fidelity visual designs that enhance user experience. Proficiency in design tools such as Figma, Canva and Adobe Creative Suite(Photoshop, Illustrator). Working with APIs and advanced HTTP networking </p>
+            <p>Proficiency in HTML5, CSS3, JavaScript, Tailwind CSS and ReactJS frameworks. Mastered responsive design and version control with Git. Expertise in creating wireframes, prototypes and high-fidelity visual designs that enhance user experience. Proficiency in design tools such as Figma, Canva and Adobe Creative Suite(Photoshop, Illustrator). Working with APIs and advanced HTTP networking.</p>
             <div class="experience">
               <div class="num">1+</div>
               <div class="exp">
@@ -134,22 +134,23 @@
         <div class="card1">
           <h2>UI/UX Design</h2>
           <p>Visually appealing web and mobile app prototypes to enhance user experience.</p>
-          <button class="button" onclick="openOverlay('ui-ux-design')">View More</button>
+          <button class="button" onclick="openOverlay('UI/UX-Design')">View More</button>
         </div>
         <div class="card2">
           <h2>Front-End Development</h2>
           <p>Real-time weather dashboard, to-do list and quotes generator projects.</p>
-          <button class="button" onclick="openOverlay('front-end-development')">View More</button>
+          <button class="button" onclick="openOverlay2('Front-End-Development')">View More</button>
         </div>
         <div class="card3">
           <h2>Graphic Design</h2>
           <p>Video content, feature graphics and Iconography.</p>
-          <button class="button" onclick="openOverlay('graphic-design')">View More</button>
+          <button class="button" onclick="openOverlay3('Graphic-Design')">View More</button>
         </div>
       </div>
       <!-- Overlay container -->
       <div class="overlay-container" id="overlay-container">
         <!-- Overlay content -->
+        
       </div>
     </div>
     </section>
