--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
         </div>
         <div class="card2">
           <h2>Front-End Development</h2>
-          <p>Real-time weather dashboard, to-do list and quotes generator projects.</p>
+          <p>Real-time weather dashboard,dynamic to-do list and gym website projects.</p>
           <button class="button" onclick="openOverlay2('Front-End-Development')">View More</button>
         </div>
         <div class="card3">
           <h2>Graphic Design</h2>
-          <p>Video content, feature graphics and Iconography.</p>
+          <p>Video content, feature graphics</p>
           <button class="button" onclick="openOverlay3('Graphic-Design')">View More</button>
         </div>
       </div>
