--- a/index.html
+++ b/index.html
@@ -106,19 +106,19 @@
           <div class="boxes">
             <div class="box">
               <div class="topic">HTML</div>
-              <div class="per">90%</div>
+              <div class="per">95%</div>
             </div>
             <div class="box">
               <div class="topic">CSS</div>
-              <div class="per">80%</div>
+              <div class="per">90%</div>
             </div>
             <div class="box">
               <div class="topic">JavaScript</div>
-              <div class="per">70%</div>
+              <div class="per">80%</div>
             </div>
             <div class="box">
-              <div class="topic">Figma</div>
-              <div class="per">80%</div>
+              <div class="topic">React</div>
+              <div class="per">70%</div>
             </div>
           </div>
         </div>
