--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <div class="per">80%</div>
             </div>
             <div class="box">
-              <div class="topic">React</div>
+              <div class="topic">ReactJS</div>
               <div class="per">70%</div>
             </div>
           </div>
