--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="topic">Designing and coding is my passion</div>
             <p>
               Enthusiastic and creative UI/UX designer with a passion for creating a positive and engaging user experience. With 1 plus years of hands-on experience in UI/UX design through an internship at Softmeet, I thrive on leveraging my skills in the job market to deliver custom creative assets and translating ideas into visually appealing designs.<br><br>Completed Front-end web development training at ALX and Web development internship at HexSoftwares. I enjoy learning new things and  my ambition is to be multi-skilled.</p><br>
-            <a href="cv.pdf" download class="button">
+            <a href="UPDATEDCV_2025.pdf" download class="button">
               <button id="button">Download CV</button>
             </a>
           </div>
@@ -118,7 +118,7 @@
             </div>
             <div class="box">
               <div class="topic">ReactJS</div>
-              <div class="per">70%</div>
+              <div class="per">75%</div>
             </div>
           </div>
         </div>
