--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="title"><span>About Me</span></div>
         <div class="about-details">
           <div class="left">
-            <img src="photo.png" alt="" />
+            <img src="IMG-20251016-WA0013.jpg" alt="" />
           </div>
           <div class="right">
             <div class="topic">Designing and coding is my passion</div>
