--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="right">
             <div class="topic">Designing and coding is my passion</div>
             <p>
-              Enthusiastic and creative UI/UX designer with a passion for creating a positive and engaging user experience. With 1 plus years of hands-on experience in UI/UX design through an internship at Softmeet, I thrive on leveraging my skills in the job market to deliver custom creative assets and translating ideas into visually appealing designs.<br><br>Completed Front-end web development training at ALX and Web development internship at HexSoftwares. I enjoy learning new things and  my ambition is to be multi-skilled.</p><br>
+              As a highly skilled UI/UX designer with over 1 year of hands-on experience, I craft intuitive and visually stunning digital experiences that drive user engagement and business results. With a deep understanding of user-centered design principles, I develop wireframes, prototypes, and high-fidelity designs that meet and exceed client expectations. I am an Adobe certified professional in graphic design and visual design, looking forward to being exposed to the graphic design, Ui/UX design and front-end web development roles upskill myself as a graduate and freelancer, while creating a great impact in the workplace..<br><br>Completed Front-end web development training at ALX and Web development internship at HexSoftwares. I enjoy learning new things and  my ambition is to be multi-skilled.</p><br>
             <a href="UPDATEDCV_2025.pdf" download class="button">
               <button id="button">Download CV</button>
             </a>
