--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="right">
             <div class="topic">Designing and coding is my passion</div>
             <p>
-              As a highly skilled UI/UX designer with over 1 year of hands-on experience, I craft intuitive and visually stunning digital experiences that drive user engagement and business results. With a deep understanding of user-centered design principles, I develop wireframes, prototypes, and high-fidelity designs that meet and exceed client expectations. I am an Adobe certified professional in graphic design and visual design, looking forward to being exposed to the graphic design, Ui/UX design and front-end web development roles upskill myself as a graduate and freelancer, while creating a great impact in the workplace..<br><br>Completed Front-end web development training at ALX and Web development internship at HexSoftwares. I enjoy learning new things and  my ambition is to be multi-skilled.</p><br>
+              As a highly skilled UI/UX designer with over 1 year of hands-on experience, I craft intuitive and visually stunning digital experiences that drive user engagement and business results. With a deep understanding of user-centered design principles, I develop wireframes, prototypes, and high-fidelity designs that meet and exceed client expectations.<br><br> I am an Adobe certified professional in graphic design and visual design, looking forward to being exposed to the graphic design, Ui/UX design and front-end web development roles upskill myself as a graduate and freelancer, while creating a great impact in the workplace.Completed Front-end web development training at ALX. I enjoy learning new things and  my ambition is to be multi-skilled.</p><br>
             <a href="UPDATEDCV_2025.pdf" download class="button">
               <button id="button">Download CV</button>
             </a>
@@ -117,8 +117,16 @@
               <div class="per">80%</div>
             </div>
             <div class="box">
-              <div class="topic">ReactJS</div>
-              <div class="per">75%</div>
+              <div class="topic">Figma</div>
+              <div class="per">92%</div>
+            </div>
+             <div class="box">
+              <div class="topic">Adobe<br>Illustrator</div>
+              <div class="per">85%</div>
+            </div>
+             <div class="box">
+              <div class="topic">Adobe<br>Photoshop</div>
+              <div class="per">90%</div>
             </div>
           </div>
         </div>
@@ -204,7 +212,7 @@
 
             <div class="card" id="card1">
                 <h2>Videos</h2>
-        <button class="button" onclick="openOverlay('Videos', ['vid5.mp4', 'Subscription Video.mp4', 'vid3.mp4', 'vid2.mp4', 'vid1.mp4'],true)">View</button>
+        <button class="button" onclick="openOverlay('Videos', ['vid5.mp4'],true)">View</button>
 
             </div>
           <div class="card" id="card2">
