--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
             <div class="card" id="card1">
                 <h2>Videos</h2>
-        <button class="button" onclick="openOverlay('Videos', ['vid5.mp4'], ['Subscription Video.mp4'],[ 'vid3.mp4'], ['vid2.mp4'], ['vid1.mp4'], true)">View</button>
+       <button class="button" onclick="openOverlay('Videos', ['vid5.mp4', 'vid1.mp4','vid3.mp4', 'Subscription Video.mp4', 'vid2.mp4', 'vid1.mp4'], true)">View</button>
 
             </div>
           <div class="card" id="card2">
@@ -291,5 +291,7 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+
   </body>
 </html>
