--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@
 
             <div class="card" id="card1">
                 <h2>Videos</h2>
-       <button class="button" onclick="openOverlay('Videos', ['vid5.mp4', 'vid1.mp4','vid3.mp4', 'Subscription Video.mp4', 'vid2.mp4', 'vid1.mp4'], true)">View</button>
+       <button class="button" onclick="openOverlay2('Videos', ['vid5.mp4', 'vid1.mp4','vid3.mp4', 'Subscription Video.mp4', 'vid2.mp4', 'vid1.mp4'], true)">View</button>
 
             </div>
           <div class="card" id="card2">
                 <h2>Posters</h2>
                  
-       <button class="button" onclick="openOverlay('Posters', ['school-competition.png', 'school-competition2.png','Celebration poster.pdf', 'competition-poster.png'])">View</button>
+       <button class="button" onclick="openOverlay2('Posters', ['school-competition.png', 'school-competition2.png','Celebration poster.pdf', 'competition-poster.png'])">View</button>
 
             </div>
              <div class="card" id="card3">
@@ -230,7 +230,7 @@
             <div class="card" id="card4">
                 <h2>Banners</h2>
                 
-       <button class="button" onclick="openOverlay('Banners', ['banner.png', 'banner2.png', 'water sticker_updated.png'])">View</button>
+       <button class="button" onclick="openOverlay2('Banners', ['banner.png', 'banner2.png', 'water sticker_updated.png'])">View</button>
 
             </div>
 
