--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <div class="card" id="card5">
                 <h2>Carousel</h2>
                  
-                   <button class="button" onclick="openOverlay('Carousel', ['Softmeet booklet.pdf', '_Carousel.pdf'])">View</button>
+                   <button class="button" onclick="openOverlay2('Carousel', ['Softmeet booklet.pdf', '_Carousel.pdf'])">View</button>
        
             </div>
                     </div>
